Fixes for pylint and testing

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ commands=python -m pytest
 addopts=
     --doctest-modules
     --doctest-glob "*.rst"
+    --ignore tests/test_bottle.py
 testpaths=docs themes tests
 
 [testenv:lint]
