--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ addopts=
     --doctest-modules
     --doctest-glob "*.rst"
     --ignore tests/test_bottle.py
-testpaths=docs themes tests
+testpaths=docs templates tests
 
 [testenv:lint]
 deps=pylint
-commands=pylint themes
+commands=pylint templates
