--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.rst
 include LICENSE
-include themes/bootstrap/*.js
-include themes/bootstrap/*.css
+include templates/bootstrap/*.js
+include templates/bootstrap/*.css
